--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Carter+One&family=Caveat+Brush&family=Economica&family=Sriracha&family=Titan+One&display=swap');
 body {
   background-color: #131517;
   margin: 0;
@@ -8,4 +9,20 @@ body {
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
+
+.carter-one-font {
+  font-family: 'Carter One', cursive;
+}
+.caveat-brush-font {
+  font-family: 'Caveat Brush', cursive;
+}
+.economica-font {
+  font-family: 'Economica', sans-serif;
+}
+.sriracha-font {
+  font-family: 'Sriracha', cursive;
+}
+.titan-one-font {
+  font-family: 'Titan One', cursive;
 }
