Add Image Filters and Address Class

--- a/src/components/About.component.css
+++ b/src/components/About.component.css
@@ -78,3 +78,18 @@
  }
 
 
+#map {
+    border: 0;
+}
+
+.img-shadow {
+    filter: drop-shadow(8px 8px 10px gray);
+}
+
+.img-contrast {
+    filter: contrast(125%) drop-shadow(8px 8px 10px gray);;
+}
+
+.addr {
+    
+}
