--- a/src/components/Carousel3D/Carousel3D.component.css
+++ b/src/components/Carousel3D/Carousel3D.component.css
@@ -8,7 +8,7 @@
     justify-items: center;
   }
   
-  main#carousel {
+  div#carousel {
     grid-row: 1 / 2;
     grid-column: 1 / 8;
     width: 100vw;
