--- a/src/components/Landing.component.css
+++ b/src/components/Landing.component.css
@@ -2,6 +2,9 @@
 
 /* font-family: 'Big Shoulders Text', cursive; */
 
+
+/* Navigation */
+
 .nav-flex-row {
     display: flex;
     flex-direction: row;
@@ -26,6 +29,8 @@
     text-transform: uppercase;
     font-weight: 300;
 }
+
+/* Header Image */
 
 .section-intro {
     height: 820px;
@@ -52,6 +57,7 @@
     align-items: center;
 }
 
+/* About Section, Contact Info Section and Carousel */
 .link-to-book-wrapper {
     flex: 1;
 }
@@ -195,24 +201,33 @@ a.link-to-book:hover {
         text-align: center;
     }
 
+    #hours-of-operation > tbody > tr > td {
+        font-size: smaller;
+    }
+
 }
 
 .text-justify {
     text-align: justify;
 }
+/* Location Section - Address */
+.address-lines {
+    font-size: 1em;
+}
 
-
-
+/* Hours of Operation Table 
+    * Week Day
+    * Dash
+    * Opening Hours
+    * Closing Hours
+*/
 #hours-of-operation > tbody > tr > td:first-child {
     font-weight: bold;
-
 }
 #hours-of-operation > tbody > tr > td:nth-child(3) {
     font-size: small;
     text-align: center;
-
 }
-
 #hours-of-operation > tbody > tr > td:nth-child(2) {
     font-size: smaller;
     text-align: center;
@@ -220,4 +235,53 @@ a.link-to-book:hover {
 #hours-of-operation > tbody > tr > td:nth-child(4) {
     font-size: smaller;
     text-align: center;
+}
+
+/* Cards */
+.card-body {
+    flex: 1 1 auto;
+    padding: var(--bs-card-spacer-y) var(--bs-card-spacer-x);
+    color: var(--bs-card-color);
+}
+
+.card {
+    --bs-card-spacer-y: 1rem;
+    --bs-card-spacer-x: 1rem;
+    --bs-card-title-spacer-y: 0.5rem;
+    --bs-card-border-width: 1px;
+    --bs-card-border-color: ;
+    --bs-card-border-radius: 0.375rem;
+    --bs-card-box-shadow: ;
+    --bs-card-inner-border-radius: calc(0.375rem - 1px);
+    --bs-card-cap-padding-y: 0.5rem;
+    --bs-card-cap-padding-x: 1rem;
+    --bs-card-cap-bg: rgba(0, 0, 0, 0.03);
+    --bs-card-cap-color: ;
+    --bs-card-height: ;
+    --bs-card-color: ;
+    --bs-card-bg: #fff;
+    --bs-card-img-overlay-padding: 1rem;
+    --bs-card-group-margin: 0.75rem;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    height: var(--bs-card-height);
+    word-wrap: break-word;
+    background-color: var(--bs-card-bg);
+    background-clip: border-box;
+    border: var(--bs-card-border-width) solid var(--bs-card-border-color);
+    border-radius: var(--bs-card-border-radius);
+}
+
+.copy-link {
+
+}
+
+.copy-link:hover {
+    
+}
+
+.btn-copy-link {
+
 }
