--- a/src/components/Landing.component.css
+++ b/src/components/Landing.component.css
@@ -286,6 +286,15 @@ a.link-to-book:hover {
 
 }
 
+.h-100 {
+    max-height:100vh;
+}
+
 .img-slides {
-    width: 100%;
+    object-fit: cover;
+    width: 50%;
+    height: 50%;
+}
+img.img-h-4 {
+    max-height: 33%;
 }
