--- a/src/landing/Landing.component.css
+++ b/src/landing/Landing.component.css
@@ -274,6 +274,35 @@ a.link-to-book:hover {
     border-radius: var(--bs-card-border-radius);
 }
 
+/* About Section Headers */
+.about-h {
+    text-transform: uppercase;
+}
+
+
+/* Carousel Image and Slide sizing */
+.h-100 {
+    max-height:100vh;
+}
+
+img.img-slide {
+    max-width: 480px;
+    max-height: 720px;
+
+}
+img.img-h-4 {
+    max-height: 33%;
+}
+.slide-container {
+    width: 40%;
+    height: 60%;
+}
+
+.carousel-container {
+    width: 40%;
+    height: 60%;
+}
+/* Copy Address, Phone Number, Email Links (on hover)*/
 .copy-link {
 
 }
@@ -284,17 +313,4 @@ a.link-to-book:hover {
 
 .btn-copy-link {
 
-}
-
-.h-100 {
-    max-height:100vh;
-}
-
-.img-slides {
-    object-fit: cover;
-    width: 50%;
-    height: 50%;
-}
-img.img-h-4 {
-    max-height: 33%;
 }
