--- a/src/landing/Landing.component.css
+++ b/src/landing/Landing.component.css
@@ -34,9 +34,7 @@
 
 .section-intro {
     height: 820px;
-    background-image: url('../../public/assets/images/firework-bg.jpg');
-    filter: blur(8px);
-    -webkit-filter: blur(8px);
+    background-image: url('../../public/assets/images/bg-textured.png');
     background-size: cover;
     display: flex;
     flex-direction: column;
@@ -240,18 +238,17 @@ a.link-to-book:hover {
 }
 
 /* Cards */
-.card-body {
+.card-body-borderless {
     flex: 1 1 auto;
     padding: var(--bs-card-spacer-y) var(--bs-card-spacer-x);
     color: var(--bs-card-color);
 }
 
-.card {
+.card-borderless {
     --bs-card-spacer-y: 1rem;
     --bs-card-spacer-x: 1rem;
     --bs-card-title-spacer-y: 0.5rem;
     --bs-card-border-width: 1px;
-    --bs-card-border-color: ;
     --bs-card-border-radius: 0.375rem;
     --bs-card-box-shadow: ;
     --bs-card-inner-border-radius: calc(0.375rem - 1px);
@@ -279,6 +276,8 @@ a.link-to-book:hover {
 /* About Section Headers */
 .about-h {
     text-transform: uppercase;
+    color:rgba(255, 0, 0, 1);
+    font-weight: bold;
 }
 
 
@@ -291,4 +290,9 @@ a.link-to-book:hover {
 .carousel-inner {
     height: 100%;
     width: 100%;
+}
+
+.display-1 {
+    line-height: 1.2;
+    font-weight: bold;
 }
