--- a/src/landing/Landing.component.css
+++ b/src/landing/Landing.component.css
@@ -1,5 +1,25 @@
 @import url('https://fonts.googleapis.com/css?family=Big+Shoulders+Text:100,300,400,500,600,700,800,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Carter+One&family=Caveat+Brush&family=Economica&family=Sriracha&family=Titan+One&display=swap');
 
+.carter-one-font {
+  font-family: 'Carter One', cursive;
+}
+.caveat-brush-font {
+  font-family: 'Caveat Brush', cursive;
+}
+.economica-font {
+  font-family: 'Economica', sans-serif;
+}
+.sriracha-font {
+  font-family: 'Sriracha', cursive;
+}
+.titan-one-font {
+  font-family: 'Titan One', cursive;
+}
+
+.big-shoulders-font {
+    font-family: 'Big Shoulders Text', cursive;
+}
 /* font-family: 'Big Shoulders Text', cursive; */
 
 
@@ -87,7 +107,6 @@ a.link-to-book:hover {
     text-align: center;
     width: 60%;
     margin: auto;
-    font-family: 'Big Shoulders Text', cursive;
     font-size: 1.8em;
     text-transform: uppercase;
 }
@@ -295,4 +314,8 @@ a.link-to-book:hover {
 .display-1 {
     line-height: 1.2;
     font-weight: bold;
+}
+
+.ws-no-wrap {
+    white-space: nowrap;
 }
