--- a/src/landing/Landing.component.css
+++ b/src/landing/Landing.component.css
@@ -54,7 +54,7 @@
 
 .section-intro {
     height: 820px;
-    background-image: url('../../public/assets/images/bg-textured.png');
+    background-image: url('../../public/assets/logo/black-bg.svg');
     background-size: cover;
     display: flex;
     flex-direction: column;
@@ -318,4 +318,17 @@ a.link-to-book:hover {
 
 .ws-no-wrap {
     white-space: nowrap;
+}
+
+
+.svg-container {
+    width: 100%;
+    height: 100%;
+    resize: both;
+    overflow: auto;
+}
+
+svg {
+    width: 95%;
+    height: 95%;
 }
