--- a/src/landing/Landing.component.css
+++ b/src/landing/Landing.component.css
@@ -321,6 +321,9 @@ a.link-to-book:hover {
 }
 
 
+
+
+/* Responsive SVG and SVG Container */
 .svg-container {
     width: 100%;
     height: 100%;
@@ -331,4 +334,12 @@ a.link-to-book:hover {
 svg {
     width: 95%;
     height: 95%;
+}
+
+
+/* Sticky Navbar */
+.sticky {
+	position: -webkit-sticky;
+	position: sticky;
+	top: 0;
 }
