--- a/src/core/core.css
+++ b/src/core/core.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Big+Shoulders+Text:100,300,400,500,600,700,800,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Carter+One&family=Caveat+Brush&family=Economica&family=Sriracha&family=Titan+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alatsi&family=Bebas+Neue&family=Kaushan+Script&display=swap');
+
 :root {
     --yellow: #E3B664;
     --gyro: #AD875F;
@@ -6,4 +10,34 @@
     --red: #ff0000af;
     --dark-red: #cc0000ff;
     --bg-black: #000000ff;
+}
+
+/* Font Families */
+.carter-one-font {
+  font-family: 'Carter One', cursive;
+}
+.caveat-brush-font {
+  font-family: 'Caveat Brush', cursive;
+}
+.economica-font {
+  font-family: 'Economica', sans-serif;
+}
+.sriracha-font {
+  font-family: 'Sriracha', cursive;
+}
+.titan-one-font {
+  font-family: 'Titan One', cursive;
+}
+
+.big-shoulders-font {
+    font-family: 'Big Shoulders Text', cursive;
+}
+.alatsi-font {
+    font-family: 'Alatsi', sans-serif;
+}
+.bebas-neue-font {
+    font-family: 'Bebas Neue', cursive;
+}
+.kaushan-script-font {
+    font-family: 'Kaushan Script', cursive;
 }
