Fix Stylsheet import

--- a/src/menu/Menu.component.css
+++ b/src/menu/Menu.component.css
@@ -23,6 +23,12 @@
 
 }
 
+/* Party Menu Items Component */
+#party-items-detail {
+    font-family: 'Alatsi', sans-serif;
+
+}
+
 /* Menu Category Headers */
 
 .category-name {
