--- a/src/landing/Landing.component.css
+++ b/src/landing/Landing.component.css
@@ -15,6 +15,7 @@ nav {
     left: 0;
     width: 100%;
     padding: 0;
+    background-color: rgba(0,0,0,0.7)
 }
 
 .nav-flex-row li {
@@ -40,7 +41,9 @@ nav {
     background-color: rgba(0,0,0,0.7);
 }
 
-
+.bg-dark-transparent {
+    background-color: rgba(0,0,0,0.7);
+}
 
 
 /* Header Image */
