Add Coloring to Author p

--- a/src/landing/Landing.component.css
+++ b/src/landing/Landing.component.css
@@ -99,20 +99,23 @@ a.link-to-book:hover {
 .about-section p,
 .about-section h3 {
     text-align: center;
-    width: 80%;
+    width: 95%;
     margin: auto;
     font-size: 1.2em;
     text-transform: uppercase;
 }
 .about-section p.muted {
-    text-align: center;
+    text-align: end;
     width: 60%;
-    margin: auto;
+    padding-top: 15px;
     font-size: 1em;
     text-transform: uppercase;
 }
-.text-red {
+.about-section p.muted:nth-child(2) {
     color: rgb(201, 37, 37);
+}
+.about-section article:nth-child(3) p.muted:nth-child(2) {
+    color: #ab8e57;
 }
 .text-yellow {
     color: #E3B664;
