Add Styling to Copy to Clipboard Icon

--- a/src/core/core.css
+++ b/src/core/core.css
@@ -10,6 +10,8 @@
     --red: #ff0000af;
     --dark-red: #cc0000ff;
     --bg-black: #000000ff;
+    --bs-link-color: #0d6efd;
+    --bs-link-hover-color: #0a58ca;
 }
 
 /* Font Families */
